--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<a href="説.html">説明書、利用についてなど</a>
 		<form id="memo-form">
 			<label for="memo">メモ作成</label>
-			<input type="text" id="memo" name="memo" placeholder="ここにメモを記入">
+			<textarea id="memo" name="memo" placeholder="ここにメモを記入"></textarea>
 			<button type="submit">メモ作成</button>
 		</form>
 		<div id="memo-list">
